# let-me-fix

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: cli.py  config.py
src/agents/: context.py  fix.py  hypothesis.py  intake.py  investigation.py  verification.py
src/graph/: graph.py  state.py
src/llm/: model.py
src/models/: events.py  hypothesis.py  manifest.py  trace.py
src/tools/: chroma_store.py  code_search.py  manifest.py  notebook_converter.py  sandbox.py  trace_parser.py  tree_sitter_tools.py
tests/: test_agent_context.py  test_agent_fix.py  test_agent_hypothesis.py  test_agent_intake.py  test_agent_investigation.py  test_agent_verification.py  test_chroma_store.py  test_code_search.py  test_graph.py  test_integration.py  test_manifest.py  test_model.py  test_models.py  test_sandbox.py  test_state.py  test_trace_parser.py  test_tree_sitter_tools.py
tests/corpus/import_error/: main.py  trace.txt
tests/corpus/notebook_project/: notebook.ipynb  trace.txt
tests/corpus/type_error/: main.py  test_main.py  trace.txt
